<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ContarProducto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15sp"
                android:text="Contar Producto"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <ImageButton
                android:id="@+id/btnatras"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="15sp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_logout_30" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.80"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10sp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categoria"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textCategoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cantidad"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/textCantidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10sp"
            android:gravity="center">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10sp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pedido"
                android:textSize="15sp"
                android:labelFor="@+id/txtPedido"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_pedido"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                app:endIconTint="@color/blue_500"
                app:shapeAppearance="@style/Cut"
                android:layout_marginStart="20sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPedido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:inputType="text"
                    android:textSize="15sp"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20sp"
            android:gravity="center">

            <TextView
                android:id="@+id/textContador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="40sp"
                tools:layout_editor_absoluteX="152dp"
                tools:layout_editor_absoluteY="414dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textStatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="40sp"
                tools:layout_editor_absoluteX="152dp"
                tools:layout_editor_absoluteY="414dp" />

            <TextView
                android:id="@+id/textAprobo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00"
                android:textSize="40sp"
                tools:layout_editor_absoluteX="152dp"
                tools:layout_editor_absoluteY="414dp"
                android:visibility="gone"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnIniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciar"
            android:layout_gravity="center"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            />

        <Button
            android:id="@+id/btnFinalizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finalizar"
            android:layout_gravity="center"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:visibility="gone"/>

    </LinearLayout>


</LinearLayout>